# prompt-help

./: .env.example  .gitignore  BUILD.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  prompt_help.spec  pyproject.toml
.github/workflows/: ci.yml
assets/: installer.iss  make_icon.py  version_info.txt
prompt_help/: __init__.py
prompt_help/cli/: actions.py  admin.py  channels.py  embed.py  inbox.py  main.py  pm_mode.py  project_optimize.py  public_library.py  pulse.py  share.py  transcripts.py
prompt_help/cli/adapters/: __init__.py  base.py  claude_code.py  codex.py  manual_drop.py
prompt_help/core/: __init__.py  action_tags.py  channels.py  classify.py  config.py  embeddings.py  fingerprint.py  indexer.py  llm_timings.py  optimizer.py  placeholders.py  pm_dialog.py  proc.py  project_optimize.py  quality.py  references.py  refresh.py  scoring.py  storage.py  transcript.py  translation_cache.py
prompt_help/data/: public_sources.yaml
prompt_help/gui/: __init__.py  __main__.py  app.py  icons.py  main_window.py  theme.py
prompt_help/gui/components/: __init__.py  (+3 more)
prompt_help/plugin/: HOOKS_SETUP.md  __init__.py  helpers.py  plugin.json
tests/: test_classify.py  test_fingerprint.py  test_gui_smoke.py  test_inbox.py  test_indexer.py  test_placeholders.py  test_pm_dialog.py  test_pm_mode.py  test_pre_compact.py  test_project_optimize.py  test_public_library.py  test_quality.py  test_references.py  test_session_start.py  test_storage.py  test_transcript.py  test_translation_cache.py
tools/: snap_all_pages.py  snap_two_pages.py
(+33 files in other folders)
