[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-help"
version = "0.1.0"
description = "跨项目提示词管理、对话挖掘、产品发现工具，深度集成 Claude Code"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "linguofeng"}]
keywords = ["claude-code", "prompt-engineering", "vibecoding", "llm"]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "openai>=1.40.0",          # DeepSeek API 用 OpenAI 兼容协议
    "GitPython>=3.1.40",
    "PyYAML>=6.0.1",
    "python-ulid>=2.7.0",
    "tomli>=2.0.0; python_version<'3.11'",
    "tomli-w>=1.0.0",
    "Pygments>=2.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-qt>=4.4.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]
gui = [
    "PySide6>=6.7.0",
    "qtawesome>=1.4.0",         # 矢量图标库（Font Awesome 6 / Material Symbols / Lucide / Phosphor / Codicons）
]

[project.scripts]
prompt-help = "prompt_help.cli.main:main"
prompt-help-gui = "prompt_help.gui.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["prompt_help*"]

[tool.setuptools.package-data]
prompt_help = ["plugin/**/*.md", "plugin/**/*.json", "plugin/**/*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
